test/functions/promotion/racy-method-receiver.good
racy-method-receiver.chpl:28: error: Racy promotion of scalar method receiver
racy-method-receiver.chpl:58: error: Racy promotion of scalar method receiver
